module(
    name = "test_rerun_bazel",
    version = "0.0.0"
)


# Python
bazel_dep(name = "rules_python", version = "1.1.0-rc1")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:pip.lock",
)

use_repo(pip, "pip")
